Pre vacation commit

--- a/Client/common.html
+++ b/Client/common.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <div id="workingIndicator">Please Wait...</div>
+        <!-- <div id="workingIndicator">Please Wait...</div> -->
         <date></date>
         <time></time>
         <username>Test (s) (h) (m) (c)</username>
